--- a/bootstraptest.html
+++ b/bootstraptest.html
@@ -5,16 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
     <!--navbar-->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
+    <nav class="navbar navbar-expand-xxl bg-dark navbar-dark py-3">
         <div class="container">
-            <a href="#" class="navbar-brand ">HELLO</a><!-- navbar-brand for brands and names-->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarmenu">
+            <a href="#" class="navbar-brand text-warning">HELLO</a><!-- navbar-brand for brands and names-->
+            <button class="navbar-toggler me-md-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarmenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarmenu"><!-- collapse.navbar-collapse for grouping and hiding navbar contents by a parent breakpoint.-->
@@ -31,30 +32,30 @@
                 </ul>
             </div>
         </div>
-        
+
     </nav>
     <!--showcase-->
-    <section class="bg-dark text-light p-5 pt-lg-0 text-center text-sm-start">
+    <section class="bg-dark text-light p-5 pt-lg-0  pb-lg-0 text-sm-start">
         <div class="container">
-            <div class="d-sm-flex align-items-center justify-content-between">
+            <div class="d-sm-flex align-items-center justify-content-between ">
                 <div> 
                     <h1 >Hello <br><span class="text-warning">I am programmer</span></h1>
-                    <p class="lead my-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    <p class="lead my-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Ipsa, totam sequi iste molestias esse quibusdam, iure minima adipisci doloribus
                          quaerat necessitatibus.</p>
-                    <button class="btn btn-primary btn-lg">Start the task</button>
+                    <button class="btn btn-primary btn-md ">Start the task</button>
                 </div>
                 <img class="img-fluid w-50 d-none d-sm-block"src="showcase.svg" alt="">
-                
+
             </div>
         </div>
     </section>
     <!--news letter-->
     <section class="bg-primary p-3 text-light">
         <div class="container-fluid">
-            <div class="d-md-flex justify-content-between align-items-center">
-                <h3 class="mb-3 mb-md-0">Sign Up for our newsletters</h3>
-                <div class="input-group news-input">
+            <div class="d-md-flex justify-content-between align-items-between">
+                <h3 class="mb-3 mb-md-0 justify-content-end">Sign Up for our newsletters</h3>
+                <div class="input-group w-50 news-input">
                     <input type="text" class="form-control" placeholder="Enter email" >
                     <button class="btn btn-dark btn-lg" type="button">Button</button>
                   </div>
@@ -104,13 +105,22 @@
             </div>
         </div>
     </section>
+    <!--learn sections-->
+    <section class="bg-light">
+        <div class="container d-flex justify-content-between align-items-center">
+            <div>
+            <p class="bg-light text-dark lead ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis mollitia eum velit totam reprehenderit maiores, aut dolorum nostrum tempora facilis magni placeat corporis eaque voluptate ad numquam quisquam aliquid non!</p>
+            <a href="#" class="btn btn-secondary mt-3 justify-content-center text-lead"><i class="bi bi-chevron-right align-items-center"></i>Click here</a>
+            </div>
+            <img src="fundamentals.svg" class="img-fluid w-50 d-none d-md-block"alt="#">
+            </div>
+        </div>
+    </section>
 
     <!-- <section class="bg-light text-light">
         <div class="container d-flex justify-content-start">
             <button class="btn btn-dark btn-lg" type="button">Home
-
             </button><button class="btn btn-dark btn-lg">School
-
             </button><button class="btn btn-dark btn-lg">House</button>
         </div>
     </section> -->
